Enhance PythonResultMap with deserializer support - Add new factory method with PythonDeserializer and field accessor - Improve type safety with proper generic type parameters