@@ -1,17 +1,45 @@
 package io.maksymuimanov.python.processor;
 
+import io.maksymuimanov.python.bind.PythonDeserializer;
 import io.maksymuimanov.python.common.MapSpec;
-import io.maksymuimanov.python.executor.PythonResultContainer;
+import org.jspecify.annotations.Nullable;
 
-import java.util.*;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
+import java.util.Set;
+import java.util.function.BiFunction;
+import java.util.function.Function;
 
 public class PythonResultMap implements MapSpec<String, PythonResult<?>> {
     private final Map<String, PythonResult<?>> delegate;
 
-    public static PythonResultMap of(PythonResultContainer container) {
-        if (container.isEmpty()) return empty();
+    public static PythonResultMap create() {
+        return new PythonResultMap(new HashMap<>());
+    }
+
+    public static <F> PythonResultMap of(Map<String, Class<?>> requirements, PythonDeserializer<F> deserializer, Function<String, F> fromFunction) {
+        return of(requirements, (name, type) -> {
+            F from = fromFunction.apply(name);
+            return deserializer.deserialize(from, type);
+        });
+    }
+
+    public static PythonResultMap of(Map<String, Class<?>> requirements, BiFunction<String, Class<?>, @Nullable Object> valueFunction) {
+        if (requirements.isEmpty()) return empty();
         Map<String, PythonResult<?>> results = new HashMap<>();
-        container.forEach((name, value) -> {
+        requirements.forEach((name, type) -> {
+            Object value = valueFunction.apply(name, type);
+            PythonResult<?> result = PythonResult.present(name, value);
+            results.put(name, result);
+        });
+        return new PythonResultMap(results);
+    }
+
+    public static PythonResultMap of(Map<String, Object> objects) {
+        if (objects.isEmpty()) return empty();
+        Map<String, PythonResult<?>> results = new HashMap<>();
+        objects.forEach((name, value) -> {
             PythonResult<?> result = PythonResult.present(name, value);
             results.put(name, result);
         });
@@ -29,29 +57,39 @@ public class PythonResultMap implements MapSpec<String, PythonResult<?>> {
     public int size() {
         return this.delegate.size();
     }
-    
+
+    @Override
     public boolean isEmpty() {
         return this.delegate.isEmpty();
     }
 
-    public boolean contains(String key) {
-        return this.delegate.containsKey(key);
+    public boolean contains(String name) {
+        return this.delegate.containsKey(name);
     }
 
-    public PythonResult<?> get(String key) {
-        return this.delegate.get(key);
-    }
-    
-    public Set<String> keySet() {
-        return Set.copyOf(this.delegate.keySet());
-    }
-    
-    public Collection<PythonResult<?>> values() {
-        return Set.copyOf(this.delegate.values());
+    public PythonResult<?> get(String name) {
+        return this.delegate.get(name);
     }
 
-    public Set<Map.Entry<String, PythonResult<?>>> entrySet() {
-        return Set.copyOf(this.delegate.entrySet());
+    public void putObject(String name, Object object) {
+        PythonResult<?> result = PythonResult.present(name, object);
+        this.put(name, result);
+    }
+
+    public void put(String name, PythonResult<?> result) {
+        this.delegate.put(name, result);
+    }
+    
+    public Set<String> keys() {
+        return Collections.unmodifiableSet(this.delegate.keySet());
+    }
+    
+    public Set<PythonResult<?>> values() {
+        return Collections.unmodifiableSet((Set<? extends PythonResult<?>>) this.delegate.values());
+    }
+
+    public Set<Map.Entry<String, PythonResult<?>>> entries() {
+        return Collections.unmodifiableSet(this.delegate.entrySet());
     }
 
     @Override
